--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "sistema",
   "version": "0.1.0",
+  "homepage": "https://oliveiradsmatheus.github.io/SistemaReact",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
-    "react": "^18.3.1", 
+    "gh-pages": "^6.1.1",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-router-dom": " ^6.26.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"  
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
